--- a/src/erlang/rel/reltool.config
+++ b/src/erlang/rel/reltool.config
@@ -1,5 +1,5 @@
 {sys, [
-       {lib_dirs, []},
+       {lib_dirs, ["../deps"]},
        {erts, [{mod_cond, derived}, {app_file, strip}]},
        {app_file, strip},
        {rel, "tchoupi", "1",
@@ -7,6 +7,7 @@
          kernel,
          stdlib,
          sasl,
+         lager,
          tchoupi
         ]},
        {rel, "start_clean", "",
