Refactoring using Martini

--- a/src/go/Makefile
+++ b/src/go/Makefile
@@ -1,11 +1,35 @@
-PKG = tchoupi Makefile
-VERSION=$(shell cat tchoupi/version.go | perl -n -e'/Version = "(.*?)"/ && print $$1')
 
-build:
+export HOME=$(CURDIR)
+export GOPATH=$(HOME)/.tchoupigo
+
+PKG = tchoupi Makefile
+VERSION=$(shell cat github.com/nlamirault/tchoupi/consts.go | perl -n -e'/Version = "(.*?)"/ && print $$1')
+
+init:
+	mkdir -p $(GOPATH)/src/
+	cp -r ./github.com $(GOPATH)/src/github.com
+	# cp -r ./Godeps/_workspace/src/ $(GOPATH)/src/
+	go get github.com/tools/godep
+
+deps:
+	$(GOPATH)/bin/godep restore
+
+build: init deps
+	cp -r ./github.com/nlamirault $(GOPATH)/src/github.com
 	go build github.com/nlamirault/tchoupi
 
-test:
+test: build
 	go test github.com/nlamirault/tchoupi
+
+# deps2:
+# 	cp -r ./github.com/nlamirault $(GOPATH)/src/github.com
+# 	$(GOPATH)/bin/godep get github.com/nlamirault/tchoupi
+
+# deps_save: deps
+# 	$(GOPATH)/bin/godep save github.com/nlamirault/tchoupi
+
+# deps_restore:
+# 	$(GOPATH)/bin/godep restore
 
 package: $(PKG)
 	mkdir -p tchoupi-$(VERSION)
@@ -17,5 +41,6 @@ clean:
 	rm -f tchoupi-$(VERSION).tar.gz
 	rm -rf tchoupi-$(VERSION)/
 	rm -f ./tchoupi
+	rm -fr $(GOPATH)
 
 .PHONY: clean
