--- a/src/go/Makefile
+++ b/src/go/Makefile
@@ -1,6 +1,7 @@
+export HOME=$(shell pwd)
+export GOPATH=$(HOME)/.goenv
 
-export HOME=$(CURDIR)
-export GOPATH=$(HOME)/.tchoupigo
+GOBUILD_OPTS      :=
 
 PKG = tchoupi Makefile
 VERSION=$(shell cat github.com/nlamirault/tchoupi/settings.go | perl -n -e'/Version = "(.*?)"/ && print $$1')
@@ -8,31 +9,25 @@ VERSION=$(shell cat github.com/nlamirault/tchoupi/settings.go | perl -n -e'/Vers
 init:
 	mkdir -p $(GOPATH)/src/
 	cp -r ./github.com $(GOPATH)/src/github.com
+	@echo "Building godep..."
 	go get github.com/tools/godep
+	@env GOPATH="${GOPATH}" go get ${GOBUILD_OPTS} github.com/tools/godep
 
-deps:
-	$(GOPATH)/bin/godep restore
+setup: init
+	@echo "Restoring deps with godep..."
+	@env GOPATH="${GOPATH}" ${GOPATH}/bin/godep restore
 
 update-deps:
 	$(GOPATH)/bin/godep get github.com/nlamirault/tchoupi
 	$(GOPATH)/bin/godep save github.com/nlamirault/tchoupi
 
-build: init deps
+build: init setup
 	cp -r ./github.com/nlamirault $(GOPATH)/src/github.com
 	go build github.com/nlamirault/tchoupi
 
 test: build
+	@echo "Running tests"
 	go test github.com/nlamirault/tchoupi
-
-# deps2:
-# 	cp -r ./github.com/nlamirault $(GOPATH)/src/github.com
-# 	$(GOPATH)/bin/godep get github.com/nlamirault/tchoupi
-
-# deps_save: deps
-# 	$(GOPATH)/bin/godep save github.com/nlamirault/tchoupi
-
-# deps_restore:
-# 	$(GOPATH)/bin/godep restore
 
 package: $(PKG)
 	mkdir -p tchoupi-$(VERSION)
