FIX Docker configuration

--- a/src/go/Dockerfile
+++ b/src/go/Dockerfile
@@ -6,12 +6,16 @@ RUN apt-get install -y wget nginx supervisor
 RUN apt-get clean
 
 # Install Go
-RUN apt-get install -y golang golang-go golang-doc golang-src
+RUN apt-get install -y make git mercurial golang golang-go golang-doc golang-src
 
 RUN mkdir -p /opt/tchoupi
 ADD github.com /opt/tchoupi/github.com
-ADD Makefile /opt/tchoupi
-RUN cd /opt/tchoupi && make
+ADD Makefile /opt/tchoupi/Makefile
+ADD Godeps /opt/tchoupi/Godeps
+WORKDIR /opt/tchoupi
+RUN make init
+RUN make setup
+RUN make build
 
 # Nginx
 ADD ./nginx/nginx.conf /etc/nginx/nginx.conf
