update Erlang version
Signed-off-by: Nicolas Lamirault <nicolas.lamirault@gmail.com>

--- a/src/erlang/relx.config
+++ b/src/erlang/relx.config
@@ -1,4 +1,4 @@
-{release, {tchoupi_app, "1"}, [tchoupi_app,observer,wx,runtime_tools]}.
+{release, {tchoupi, "1"}, [tchoupi,observer,wx,runtime_tools]}.
 {extended_start_script, true}.
 {lager, [
   {log_root, "/tmp/tchoupi"},
