--- a/src/erlang/Makefile
+++ b/src/erlang/Makefile
@@ -1,6 +1,7 @@
-PROJECT = tchoupi_app
+PROJECT = tchoupi
 
-DEPS = cowboy lager epgsql jiffy
+DEPS = cowboy lager
 dep_cowboy = git https://github.com/ninenines/cowboy master
+dep_lager = git https://github.com/basho/lager master
 
 include erlang.mk
