--- a/src/erlang/Makefile
+++ b/src/erlang/Makefile
@@ -1,7 +1,9 @@
 PROJECT = tchoupi
 
-DEPS = cowboy lager
+DEPS = cowboy
 dep_cowboy = git https://github.com/ninenines/cowboy master
-dep_lager = git https://github.com/basho/lager master
 
 include erlang.mk
+
+cleanup:
+	rm -fr deps _rel
