--- a/src/erlang/relx.config
+++ b/src/erlang/relx.config
@@ -1,11 +1,2 @@
-{release, {tchoupi, "1"}, [tchoupi,observer,wx,runtime_tools]}.
+{release, {tchoupi_example, "1"}, [tchoupi]}.
 {extended_start_script, true}.
-{lager, [
-  {log_root, "/tmp/tchoupi"},
-  {handlers, [
-    {lager_console_backend, info},
-    {lager_file_backend, [{file, "error.log"}, {level, error}]},
-    {lager_file_backend, [{file, "console.log"}, {level, info}]}
-  ]}
-]}.
-{vm_args, "./etc/vm.args"}.
