--- a/src/python/tox.ini
+++ b/src/python/tox.ini
@@ -2,7 +2,9 @@
 envlist = py27
 
 [testenv]
-deps = -r{toxinidir}/requirements.txt
+deps =
+     -r{toxinidir}/requirements.txt
+     -r{toxinidir}/requirements-test.txt
 
 setenv = VIRTUAL_ENV={envdir}
          EVENTLET_NO_GREENDNS=yes
