--- a/src/rust/Makefile
+++ b/src/rust/Makefile
@@ -1,4 +1,4 @@
-# Copyright (C) 2015 Nicolas Lamirault <nicolas.lamirault@gmail.com>
+# Copyright (C) 2015, 2016 Nicolas Lamirault <nicolas.lamirault@gmail.com>
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -28,7 +28,7 @@ CARGO = cargo
 SRC=src
 
 VERSION=$(shell \
-        grep "const Version" $(SRC)/version.rs \
+        grep "version" Cargo.toml \
         |awk -F'=' '{print $$2}' \
         |sed -e "s/[^0-9.]//g" \
 	|sed -e "s/ //g")
