--- a/src/erlang/.gitignore
+++ b/src/erlang/.gitignore
@@ -1,5 +1,16 @@
-deps/
-ebin/
-.eunit/
-logs/
-test/*.beam
+.rebar3
+_*
+.eunit
+*.o
+*.beam
+*.plt
+*.swp
+*.swo
+.erlang.cookie
+ebin
+log
+erl_crash.dump
+.rebar
+logs
+_build
+rebar3.crashdump
