--- a/src/erlang/rebar.config
+++ b/src/erlang/rebar.config
@@ -12,28 +12,53 @@
 %% See the License for the specific language governing permissions and
 %% limitations under the License.
 
+%%-------------------------------------------------------------------
+%% General options
+%%-------------------------------------------------------------------
 
-{erl_opts, [debug_info]}.
+{require_otp_vsn, "19"}.
+
+{erl_opts, [
+            warn_export_vars,
+            warn_shadow_vars,
+            warn_obsolete_guard,
+            warn_unused_import,
+            warnings_as_errors,
+            fail_on_warning,
+            debug_info]}.
+
+%%-------------------------------------------------------------------
+%% Plugins
+%%-------------------------------------------------------------------
+
 {plugins, [
            rebar3_run,
            rebar3_vendor
 ]}.
+
+
+%%-------------------------------------------------------------------
+%% Dependencies
+%%-------------------------------------------------------------------
+
+
 {deps, [
         {cowboy, "1.0.4"}
        ]}.
 
-{relx, [{release, { tchoupi, "0.1.0" },
-         [tchoupi,
-          sasl]},
 
-        {sys_config, "./config/sys.config"},
-        {vm_args, "./config/vm.args"},
+%%-------------------------------------------------------------------
+%% Testing
+%%-------------------------------------------------------------------
 
-        {dev_mode, true},
-        {include_erts, false},
+{cover_enabled, true}.
 
-        {extended_start_script, true}]
-}.
+{eunit_opts, [{report,{eunit_surefire,[{dir,"."}]}}]}.
+
+%%-------------------------------------------------------------------
+%% Profiles
+%%-------------------------------------------------------------------
+
 
 {profiles, [
             {prod, [{relx, [{dev_mode, false},
@@ -45,4 +70,21 @@
                           ]}
                   ]}
            ]
+}.
+
+%%-------------------------------------------------------------------
+%% RELx
+%%-------------------------------------------------------------------
+
+{relx, [{release, { tchoupi, "0.1.0" }, [
+                                         tchoupi,
+                                         sasl]},
+
+        {sys_config, "./config/sys.config"},
+        {vm_args, "./config/vm.args"},
+
+        {dev_mode, true},
+        {include_erts, false},
+
+        {extended_start_script, true}]
 }.
