--- a/src/erlang/rebar.config
+++ b/src/erlang/rebar.config
@@ -25,6 +25,7 @@
             warn_unused_import,
             warnings_as_errors,
             fail_on_warning,
+            {parse_transform, lager_transform},
             debug_info]}.
 
 %%-------------------------------------------------------------------
@@ -44,6 +45,7 @@
 
 {deps, [
         {jsx, "2.8.0"},
+        {lager, "3.2.1"},
         {cowboy, "1.0.4"}
        ]}.
 
