--- a/src/python/tox.ini
+++ b/src/python/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27
+envlist = py3
 
 [testenv]
 deps =
@@ -8,15 +8,16 @@ deps =
 
 setenv = VIRTUAL_ENV={envdir}
          EVENTLET_NO_GREENDNS=yes
-commands = nosetests --exe {posargs}
-
+commands = py.test --ignore=venv {posargs}
 sitepackages = False
-
-downloadcache = {toxworkdir}/_download
 
 [testenv:coverage]
 setenv = VIRTUAL_ENV={envdir}
-commands = nosetests --exe --with-xcoverage --xcoverage-file={toxworkdir}/coverage/coverage.xml --with-xunit --xunit-file={toxworkdir}/coverage/xunit.xml --cover-html --cover-html-dir={toxworkdir}/coverage --cover-package=tchoupi {posargs}
+deps =
+     -r{toxinidir}/requirements.txt
+     -r{toxinidir}/requirements-test.txt
+commands =
+         py.test --ignore=venv --cov=tchoupi {posargs}
 
 [testenv:pep8]
 commands = flake8
