--- a/src/python/Makefile
+++ b/src/python/Makefile
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 # -*- Mode: Python; tab-width: 4 -*-
 
-# Copyright (c) 2014, 2015 Nicolas Lamirault <nicolas.lamirault@gmail.com>
+# Copyright (c) 2014-2016 Nicolas Lamirault <nicolas.lamirault@gmail.com>
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -16,6 +16,8 @@
 # limitations under the License.
 
 APP="tchoupi"
+
+DOCKER = docker
 
 SHELL = /bin/bash
 
@@ -61,3 +63,15 @@ test:
 run:
 	@echo -e "$(OK_COLOR)[$(APP)] Start$(NO_COLOR)"
 	. venv/bin/activate && ./wsgi.py
+
+.PHONY: docker-build
+docker-build:
+	@$(DOCKER) build -t tchoupi-python .
+
+.PHONY: docker-test
+docker-test:
+	@$(DOCKER) run --rm -it --name tchoupi-python-test tchoupi-python /bin/bash -c "cd /opt/tchoupi/ && make init test"
+
+.PHONY: docker-run
+docker-run:
+	@$(DOCKER) run --rm -it --name tchoupi-python-debug tchoupi-python
