--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -1,12 +1,32 @@
+# Copyright (C) 2016 Nicolas Lamirault <nicolas.lamirault@gmail.com>
+
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 [package]
 name = "tchoupi"
 version = "0.1.0"
+description = "A simple webservice"
 readme = "README.md"
-documentation = "http://github.com/nlamirault/tchoupi"
+documentation = "https://github.com/nlamirault/tchoupi"
 repository = "https://github.com/nlamirault/tchoupi"
+license = "Apache 2"
 authors = ["Nicolas Lamirault <nicolas.lamirault@gmail.com>"]
+keywords = ["webservice"]
 
 [dependencies]
+env_logger = "0.3.3"
 iron="0.3.0"
 router = "0.1.1"
 rustc-serialize = "0.3.16"
+
+[dev-dependencies]
