--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -24,6 +24,7 @@ authors = ["Nicolas Lamirault <nicolas.lamirault@gmail.com>"]
 keywords = ["webservice"]
 
 [dependencies]
+log = "0.3.6"
 env_logger = "0.3.3"
 iron="0.3.0"
 router = "0.1.1"
