--- a/src/erlang/rebar.config
+++ b/src/erlang/rebar.config
@@ -34,6 +34,7 @@
 
 {plugins, [
            rebar3_run,
+           {rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "0.1.6"}}},
            rebar3_vendor
 ]}.
 
